[gd_scene load_steps=6 format=3 uid="uid://b8tp72b0opp4u"]

[ext_resource type="Script" uid="uid://clkmaoboqfu50" path="res://Scripts/UI/Garden_UI.gd" id="1_8dd0n"]
[ext_resource type="Texture2D" uid="uid://da5nm57w2e1kr" path="res://Art/Player/Player_test.png" id="1_wwyio"]
[ext_resource type="ArrayMesh" uid="uid://f5dcn2nq6al4" path="res://Art/Props/Garden/Planter_Med.obj" id="2_8dd0n"]

[sub_resource type="FontVariation" id="FontVariation_n4go3"]

[sub_resource type="Theme" id="Theme_5thwm"]

[node name="GardenUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8dd0n")

[node name="DateTime" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="Label" type="Label" parent="DateTime"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -138.0
offset_top = 43.0
offset_right = -55.0
offset_bottom = 114.0
grow_horizontal = 0
theme_override_fonts/font = SubResource("FontVariation_n4go3")
theme_override_font_sizes/font_size = 24
text = "Season
Date"

[node name="DirtUI" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="DirtUI BG" type="ColorRect" parent="DirtUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = -15.08
anchor_top = -6.039
anchor_right = 15.861
anchor_bottom = 7.186
offset_left = 94.2
offset_top = -5.43997
offset_right = -22.4401
offset_bottom = -22.44
grow_horizontal = 2
grow_vertical = 2
color = Color(0.175682, 0.192937, 0.176285, 1)

[node name="Sprite2D" type="Sprite2D" parent="DirtUI"]
position = Vector2(29.0001, 19.0001)
texture = ExtResource("1_wwyio")

[node name="MeshInstance2D" type="MeshInstance2D" parent="DirtUI"]
modulate = Color(0.714295, 0.499947, 0.326613, 1)
position = Vector2(24, 248)
rotation = -3.14159
scale = Vector2(405.343, 377.829)
mesh = ExtResource("2_8dd0n")

[node name="ScreenContainer" type="VBoxContainer" parent="DirtUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.07
anchor_top = 4.77
anchor_right = 1.8
anchor_bottom = 4.935
offset_left = -219.0
offset_top = -413.0
offset_right = 220.0
offset_bottom = -94.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="DirtUI/ScreenContainer"]
layout_mode = 2
text = "Täida pott mullaga"

[node name="ClosePlantButton" type="Button" parent="DirtUI/ScreenContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Sulge Aken"

[node name="ButtonContainer" type="HBoxContainer" parent="DirtUI/ScreenContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_constants/separation = 128

[node name="DirtButton" type="Button" parent="DirtUI/ScreenContainer/ButtonContainer"]
layout_mode = 2
text = "Lisa Mulda!"

[node name="VBoxContainer" type="VBoxContainer" parent="DirtUI/ScreenContainer/ButtonContainer"]
layout_mode = 2
size_flags_stretch_ratio = 6.05
theme = SubResource("Theme_5thwm")
theme_override_constants/separation = 9

[node name="PotLabel" type="Label" parent="DirtUI/ScreenContainer/ButtonContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Pott on täidetud 0%"

[node name="DirtLabel" type="Label" parent="DirtUI/ScreenContainer/ButtonContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Mulda: "

[node name="GravelLabel" type="Label" parent="DirtUI/ScreenContainer/ButtonContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Kruusa: "

[node name="GravelButton" type="Button" parent="DirtUI/ScreenContainer/ButtonContainer"]
layout_mode = 2
text = "Lisa Kruusa!"

[node name="PlantUI" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="DirtUI BG" type="ColorRect" parent="PlantUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = -15.08
anchor_top = -6.039
anchor_right = 15.861
anchor_bottom = 7.186
offset_left = 94.2
offset_top = -5.43997
offset_right = -22.4401
offset_bottom = -22.44
grow_horizontal = 2
grow_vertical = 2
color = Color(0.175682, 0.192937, 0.176285, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="PlantUI/DirtUI BG"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -40.0
offset_right = 74.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 155

[node name="PlantNamesContainer" type="VBoxContainer" parent="PlantUI/DirtUI BG/HBoxContainer"]
custom_minimum_size = Vector2(70, 80)
layout_mode = 2
size_flags_horizontal = 4

[node name="PlantNamesTitle" type="Label" parent="PlantUI/DirtUI BG/HBoxContainer/PlantNamesContainer"]
layout_mode = 2
text = "Vali Istutatav Taim:"

[node name="ThymeButton" type="Button" parent="PlantUI/DirtUI BG/HBoxContainer/PlantNamesContainer"]
layout_mode = 2
text = "Tüümian"

[node name="PotStatusContainer" type="VBoxContainer" parent="PlantUI/DirtUI BG/HBoxContainer"]
layout_mode = 2

[node name="DirtCompoTitleLabel" type="Label" parent="PlantUI/DirtUI BG/HBoxContainer/PotStatusContainer"]
layout_mode = 2
text = "Potis On:"

[node name="DirtLabel" type="Label" parent="PlantUI/DirtUI BG/HBoxContainer/PotStatusContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Mulda: "

[node name="GravelLabel" type="Label" parent="PlantUI/DirtUI BG/HBoxContainer/PotStatusContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Kruusa: "

[node name="ClosePlantButton" type="Button" parent="PlantUI/DirtUI BG/HBoxContainer"]
layout_mode = 2
text = "Sulge Aken"

[node name="CareUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="DirtUI BG" type="ColorRect" parent="CareUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = -15.08
anchor_top = -6.039
anchor_right = 15.861
anchor_bottom = 7.186
offset_left = 94.2
offset_top = -5.43997
offset_right = -22.4401
offset_bottom = -22.44
grow_horizontal = 2
grow_vertical = 2
color = Color(0.175682, 0.192937, 0.176285, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="CareUI/DirtUI BG"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -40.0
offset_right = 74.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 155

[node name="ClosePlantButton" type="Button" parent="CareUI/DirtUI BG/HBoxContainer"]
layout_mode = 2
text = "Sulge Aken"

[node name="VBoxContainer" type="VBoxContainer" parent="CareUI/DirtUI BG/HBoxContainer"]
layout_mode = 2

[node name="CurrentlyGrowing" type="Label" parent="CareUI/DirtUI BG/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Hetkel Kasvab: "

[node name="Plantname" type="Label" parent="CareUI/DirtUI BG/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Niiskust" type="Label" parent="CareUI/DirtUI BG/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Niiskust on:"

[node name="MoistureLabel" type="Label" parent="CareUI/DirtUI BG/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "0%"

[node name="Väetist" type="Label" parent="CareUI/DirtUI BG/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Väetist on:"

[node name="FertLabel" type="Label" parent="CareUI/DirtUI BG/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "0%"

[node name="Taimekasv" type="Label" parent="CareUI/DirtUI BG/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Taime kasv on:"

[node name="GrowthLabel" type="Label" parent="CareUI/DirtUI BG/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "0%"

[connection signal="pressed" from="DirtUI/ScreenContainer/ClosePlantButton" to="." method="_on_close_plant_button_pressed"]
[connection signal="pressed" from="DirtUI/ScreenContainer/ButtonContainer/DirtButton" to="." method="_on_dirt_button_pressed"]
[connection signal="pressed" from="DirtUI/ScreenContainer/ButtonContainer/GravelButton" to="." method="_on_gravel_button_pressed"]
[connection signal="pressed" from="PlantUI/DirtUI BG/HBoxContainer/PlantNamesContainer/ThymeButton" to="." method="_on_thyme_button_pressed"]
[connection signal="pressed" from="PlantUI/DirtUI BG/HBoxContainer/ClosePlantButton" to="." method="_on_close_plant_button_pressed"]
[connection signal="pressed" from="CareUI/DirtUI BG/HBoxContainer/ClosePlantButton" to="." method="_on_close_plant_button_pressed"]
